// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@jscutlery/semver @jscutlery/semver:migrate-nx-release should generate CHANGELOG.md: b-0.3.0 1`] = `
"## 0.3.0 (yyyy-mm-dd)

### 🚀 Features

- **b:** 🚀 new feature

### ❤️ Thank You

- Test Bot

## [0.2.0](///compare/b-0.1.0...b-0.2.0) (yyyy-mm-dd)

### Features

- **b:** 🚀 new feature xxxxxxx

## 0.1.0 (yyyy-mm-dd)

### Features

- **b:** 🚀 new feature xxxxxxx

### Bug Fixes

- **b:** 🐞 fix bug xxxxxxx
"
`;

exports[`@jscutlery/semver @jscutlery/semver:version when libs/a changed (v0.0.0 => v0.1.0) should generate CHANGELOG.md: a-0.1.0 1`] = `
"# Changelog

This file was generated using [@jscutlery/semver](https://github.com/jscutlery/semver).

# 0.1.0 (yyyy-mm-dd)


### Bug Fixes

* **a:** 🐞 fix bug xxxxxxx


### Features

* **a:** 🚀 new feature xxxxxxx
"
`;

exports[`@jscutlery/semver @jscutlery/semver:version when libs/a changed (v0.1.0 => v0.1.1) should generate CHANGELOG.md: a-0.1.1 1`] = `
"# Changelog

This file was generated using [@jscutlery/semver](https://github.com/jscutlery/semver).

## [0.1.1](/compare/a-0.1.0...a-0.1.1) (yyyy-mm-dd)


### Bug Fixes

* **a:** 🐞 fix bug xxxxxxx



# 0.1.0 (yyyy-mm-dd)


### Bug Fixes

* **a:** 🐞 fix bug xxxxxxx


### Features

* **a:** 🚀 new feature xxxxxxx
"
`;

exports[`@jscutlery/semver @jscutlery/semver:version when libs/a changed (v0.1.1 => v1.0.0) should generate CHANGELOG.md: a-1.0.0 1`] = `
"# Changelog

This file was generated using [@jscutlery/semver](https://github.com/jscutlery/semver).

# [1.0.0](/compare/a-0.1.1...a-1.0.0) (yyyy-mm-dd)


### Features

* **a:** 🚀 new feature xxxxxxx


### BREAKING CHANGES

* **a:** 🚨 Breaking change description



## [0.1.1](/compare/a-0.1.0...a-0.1.1) (yyyy-mm-dd)


### Bug Fixes

* **a:** 🐞 fix bug xxxxxxx



# 0.1.0 (yyyy-mm-dd)


### Bug Fixes

* **a:** 🐞 fix bug xxxxxxx


### Features

* **a:** 🚀 new feature xxxxxxx
"
`;

exports[`@jscutlery/semver @jscutlery/semver:version when libs/b changed (v0.0.0 => v0.1.0) should generate CHANGELOG.md: b-0.1.0 1`] = `
"# Changelog

This file was generated using [@jscutlery/semver](https://github.com/jscutlery/semver).

## 0.1.0 (yyyy-mm-dd)


### Features

* **b:** 🚀 new feature xxxxxxx


### Bug Fixes

* **b:** 🐞 fix bug xxxxxxx
"
`;

exports[`@jscutlery/semver @jscutlery/semver:version when libs/b changed with --skipCommit (v0.1.0 => v0.2.0) should generate CHANGELOG.md: b-0.2.0 1`] = `
"# Changelog

This file was generated using [@jscutlery/semver](https://github.com/jscutlery/semver).

## [0.2.0](///compare/b-0.1.0...b-0.2.0) (yyyy-mm-dd)


### Features

* **b:** 🚀 new feature xxxxxxx

## 0.1.0 (yyyy-mm-dd)


### Features

* **b:** 🚀 new feature xxxxxxx


### Bug Fixes

* **b:** 🐞 fix bug xxxxxxx
"
`;

exports[`@jscutlery/semver @jscutlery/semver:version when libs/d changed (v0.0.0 => v0.1.0) should generate CHANGELOG.md: d-0.1.0 1`] = `
"# Changelog

This file was generated using [@jscutlery/semver](https://github.com/jscutlery/semver).

## 0.1.0 (yyyy-mm-dd)


### ✨ Awesome features

* **d:** 🚀 new awesome feature xxxxxxx
"
`;

exports[`@jscutlery/semver @jscutlery/semver:version when pre-releasing libs/a with --releaseAs=preminor --preid=alpha (v1.1.0-beta.1 => v1.1.0-alpha.0) when pre-releasing libs/a with --releaseAs=preminor --preid=alpha (v1.1.0-alpha.0 => v1.2.0-alpha.0) should generate CHANGELOG.md: a-1.2.0-alpha.0 1`] = `
"# Changelog

This file was generated using [@jscutlery/semver](https://github.com/jscutlery/semver).

# [1.2.0-alpha.0](/compare/a-1.1.0-alpha.0...a-1.2.0-alpha.0) (yyyy-mm-dd)


### Features

* **a:** 🚀 new feature 2 xxxxxxx



# [1.1.0-alpha.0](/compare/a-1.1.0-beta.1...a-1.1.0-alpha.0) (yyyy-mm-dd)


### Features

* **a:** 🚀 new feature 1 xxxxxxx



# [1.1.0-beta.1](/compare/a-1.1.0-beta.0...a-1.1.0-beta.1) (yyyy-mm-dd)


### Features

* **a:** 🚀 new feature 2 xxxxxxx



# [1.1.0-beta.0](/compare/a-1.0.0...a-1.1.0-beta.0) (yyyy-mm-dd)


### Features

* **a:** 🚀 new feature 1 xxxxxxx



# [1.0.0](/compare/a-0.1.1...a-1.0.0) (yyyy-mm-dd)


### Features

* **a:** 🚀 new feature xxxxxxx


### BREAKING CHANGES

* **a:** 🚨 Breaking change description



## [0.1.1](/compare/a-0.1.0...a-0.1.1) (yyyy-mm-dd)


### Bug Fixes

* **a:** 🐞 fix bug xxxxxxx



# 0.1.0 (yyyy-mm-dd)


### Bug Fixes

* **a:** 🐞 fix bug xxxxxxx


### Features

* **a:** 🚀 new feature xxxxxxx
"
`;

exports[`@jscutlery/semver @jscutlery/semver:version when pre-releasing libs/a with --releaseAs=prerelease --preid=beta (v1.0.0 => v1.1.0-beta.0) when pre-releasing libs/a with --releaseAs=prerelease --preid=beta (v1.1.0-beta.0 => v1.1.0-beta.1) should generate CHANGELOG.md: a-1.1.0-beta.1 1`] = `
"# Changelog

This file was generated using [@jscutlery/semver](https://github.com/jscutlery/semver).

# [1.1.0-beta.1](/compare/a-1.1.0-beta.0...a-1.1.0-beta.1) (yyyy-mm-dd)


### Features

* **a:** 🚀 new feature 2 xxxxxxx



# [1.1.0-beta.0](/compare/a-1.0.0...a-1.1.0-beta.0) (yyyy-mm-dd)


### Features

* **a:** 🚀 new feature 1 xxxxxxx



# [1.0.0](/compare/a-0.1.1...a-1.0.0) (yyyy-mm-dd)


### Features

* **a:** 🚀 new feature xxxxxxx


### BREAKING CHANGES

* **a:** 🚨 Breaking change description



## [0.1.1](/compare/a-0.1.0...a-0.1.1) (yyyy-mm-dd)


### Bug Fixes

* **a:** 🐞 fix bug xxxxxxx



# 0.1.0 (yyyy-mm-dd)


### Bug Fixes

* **a:** 🐞 fix bug xxxxxxx


### Features

* **a:** 🚀 new feature xxxxxxx
"
`;
